# banking-snowflake-dbt-airflow

./: README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
banking_dbt/: dbt_project.yml
banking_dbt/models/facts/: facts_transactions.sql
banking_dbt/models/marts/: accounts_mart.sql  customer_mart.sql
banking_dbt/models/staging/: customer_st.sql  transactions_st.sql
banking_dbt/snapshots/: accounts_snapshot.sql  customers_snapshot.sql
consumer/: kafka_to_minio.py
data-generation/: fake_sql_data.py
docker/dags/: minio_to_snowflake.py  scd_airflow.py
kafka-ingestion/: kafka-debezium_config_conn.py
